--- a/GP/build.gradle
+++ b/GP/build.gradle
@@ -1,5 +1,17 @@
+// Add
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'io.spring.gradle:dependency-management-plugin:0.4.1.RELEASE'
+    }
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
+// Add
+apply plugin: 'io.spring.dependency-management'
 
 sourceCompatibility = 1.5
 version = '1.0'
@@ -14,7 +26,17 @@ repositories {
     mavenCentral()
 }
 
+// Add
+dependencyManagement {
+    imports {
+        mavenBom 'io.spring.platform:platform-bom:1.1.2.RELEASE'
+    }
+}
+
 dependencies {
+    // Add
+    compile 'org.springframework.boot:spring-boot-starter-web'
+
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
