--- a/GP/build.gradle
+++ b/GP/build.gradle
@@ -50,6 +50,11 @@ dependencyManagement {
 }
 
 dependencies {
+    // Add
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // Add
+    compile 'mysql:mysql-connector-java'
+
     compile 'org.codehaus.groovy:groovy-all:2.4.3'
     compile 'org.springframework.boot:spring-boot-starter-web'
 
