--- a/GP/build.gradle
+++ b/GP/build.gradle
@@ -53,7 +53,7 @@ dependencyManagement {
 
 dependencies {
     // Add
-    compile 'org.codehaus.groovy:groovy-all:2.4.3'
+    compile 'org.codehaus.groovy:groovy-all'
     compile 'org.springframework.boot:spring-boot-starter-web'
 
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
