--- a/GP/build.gradle
+++ b/GP/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     compile 'mysql:mysql-connector-java'
     compile 'org.codehaus.groovy:groovy-all'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // Add
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'org.springframework.boot:spring-boot-starter-web'
 }
 
