--- a/GP/src/main/resources/application.properties
+++ b/GP/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.database=MYSQL
 # validate | update | create | create-drop
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Add
+# THYMELEAF (ThymeleafAutoConfiguration)
+spring.thymeleaf.cache=false
